--- a/envoy.yaml
+++ b/envoy.yaml
@@ -16,7 +16,8 @@ static_resources:
                     "@type": type.googleapis.com/google.protobuf.StringValue
                     value: |
                       {
-                        "config_path": "./sentinel.yml"
+                        "config_path": "./sentinel.yml",
+                        "resource_name": "http://localhost/"
                       }
                   # Use the same vm_config as above, so we can reuse the same VM for multiple queues.
                   vm_config:
